<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog_frag"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/title_edit_phone_number"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/kuang_grey_round_2dp"
        android:hint="@string/hint_input_new_phone_number"
        android:inputType="phone"
        android:maxLength="11"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:textColor="@color/maas_text_primary"
        android:textColorHint="@color/maas_text_light_gray"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/line_color_AAAAAA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_negative"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/maas_text_gray"
            android:textSize="@dimen/sp_18" />

        <View
            android:layout_width="@dimen/dp_0_5"
            android:layout_height="match_parent"
            android:background="@color/line_color_AAAAAA" />

        <TextView
            android:id="@+id/btn_positive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/maas_text_blue"
            android:textSize="@dimen/sp_18" />

    </LinearLayout>


</LinearLayout>
