<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/dp_305"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg_white_5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_16"
        android:text="@string/dialog_start_listen_order_msg1"
        android:textColor="@color/maas_text_primary"
        android:lineSpacingExtra="@dimen/dp_6"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_20"
        style="@style/text_bold_font_family"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_16"
        android:text="@string/dialog_start_listen_order_msg2"
        android:textColor="@color/maas_text_primary"
        android:lineSpacingExtra="@dimen/dp_6"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_20"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:layout_marginTop="@dimen/dp_18"
        android:background="@color/line_color_AAAAAA"/>

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:textColor="@color/maas_text_blue"
        android:textSize="@dimen/sp_18"
        style="@style/text_bold_font_family"
        android:gravity="center"
        android:text="@string/i_got_it"/>

</LinearLayout>