<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_order_cost"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/bg_order_detail_info_card_small"
    android:paddingLeft="@dimen/dp_15"
    android:paddingRight="@dimen/dp_15"
    android:paddingTop="@dimen/dp_12"
    android:paddingBottom="@dimen/dp_15"
    android:orientation="vertical"
    android:clickable="true"
    android:visibility="gone">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_cost"
            android:layout_centerVertical="true"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/maas_text_primary"/>

        <TextView
            android:id="@+id/tv_total_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/tv_temp"
            android:text="00.00"
            android:textStyle="bold"
            android:textColor="@color/maas_text_primary"
            style="@style/text_bold_font_family"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/dp_5"
            android:text="@string/rmb"
            android:layout_centerVertical="true"
            android:textColor="@color/maas_text_primary"
            android:textSize="@dimen/sp_14" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_base_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/fare"
            android:textColor="@color/maas_text_gray"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_base_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="00.00元"
            android:textColor="@color/maas_text_primary"
            android:textSize="@dimen/sp_14" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_other_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/other"
            android:textColor="@color/maas_text_gray"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_other_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="00.00元"
            android:textColor="@color/maas_text_primary"
            android:textSize="@dimen/sp_14" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_service_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/service_charge"
            android:textColor="@color/maas_text_gray"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_service_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="00.00元"
            android:textColor="@color/maas_text_primary"
            android:textSize="@dimen/sp_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:layout_marginTop="@dimen/dp_13"
        android:background="@color/c_DFE5F2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/maas_text_gray"
            android:text="@string/order_type"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_order_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/maas_text_primary"
            android:text="--"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/maas_text_gray"
            android:text="@string/order_number"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/maas_text_primary"
            android:text="--"/>

    </LinearLayout>
</LinearLayout>

